# Heart

./: .gitignore  LICENSE  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/io/github/mumu12641/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  lame_lib.cpp  mp3_encoder.cpp  native-lib.cpp  wave_lib.cpp
app/src/main/cpp/include/: wave.h
app/src/main/cpp/include/lame/: mp3_encoder.h
app/src/main/java/io/github/mumu12641/: App.kt  MainActivity.kt
app/src/main/java/io/github/mumu12641/BLE/: BLEModule.kt  BLEService.kt  BluetoothModule.kt  BlutetoothService.kt  State.kt
app/src/main/java/io/github/mumu12641/BLE/util/: BluetoothClient.kt  BluetoothHelper.kt
app/src/main/java/io/github/mumu12641/data/local/: ECGModelRepository.kt
app/src/main/java/io/github/mumu12641/data/proto/: UserProfileModule.kt  UserProfileRepository.kt  UserProfileSerializer.kt
app/src/main/java/io/github/mumu12641/data/remote/: NetworkModule.kt  NetworkRepository.kt  NetworkService.kt
app/src/main/java/io/github/mumu12641/service/: BluetoothService.kt  BlutetoothService.kt
app/src/main/java/io/github/mumu12641/util/: Constant.kt  DataUtil.kt  FileUtil.kt
app/src/main/proto/: UserProfile.proto
app/src/main/python/: wav.py
app/src/main/res/raw/: profile.json  welcome.json
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/test/java/io/github/mumu12641/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+25 files in other folders)
